# railway_tools_detection

./: .gitignore  01_crawl.py  02_train.py  03_inference.py  04_mnn_inference.py  README.md
clutters/: auto_annotator.py  bbox_annotation.py  mask_annotation.py  point_annotator.py  predict.py  sam.py  sam_annotator.py
data/: get_dataset.py  railwaytools.yaml  rename_chinese2pinyin.py
data/datasets/: config.yaml
interface/: CMakeLists.txt  README.md
interface/include/: inference.h  result.h
interface/src/: inference.cc  main.cc  result.cc
